# efp-logger

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  benchmark.cpp  efp_logger_benchmark.cpp  efp_logger_example.cpp
include/: format.hpp  logger.hpp  rt_log.hpp
include/efp/: logger.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  benchmark.cpp  efp_log_test.cpp  efp_logger_test.cpp  fmt_enum_test.cpp
